# FinancialDashboard

./: .replit  app.py  budget_tools.py  data_handler.py  finance_app.db  finance_dashboard.db  plaid_integration.py  plaid_link.py  pyproject.toml  replit.nix  run.py  test.db  truelayer_integration.py  truelayer_link.py  truelayer_link_new.py  utils.py  visualizations.py
attached_assets/: auth.py  db.py  key.ipynb  main.py  models.py  requirements.txt  utils.py
backend/app/: main.py
backend/app/api/: api.py  dependencies.py
backend/app/core/: config.py  security.py  truelayer.py
backend/app/crud/: __init__.py  bank.py  user.py
backend/app/db/: base.py  init_db.py
backend/app/models/: __init__.py  bank.py  user.py
backend/app/schemas/: __init__.py  bank.py  token.py  user.py
bank_integration/: auth_manager.py  transaction_manager.py  truelayer_api.py
components/: bank_connection.py  transaction_dashboard.py
database/: db_manager.py
frontend/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/lib/: main.dart  theme.dart
frontend/lib/config/: app_config.dart
frontend/lib/models/: bank_account.dart  models.dart  token.dart  transaction.dart  user.dart
frontend/lib/screens/: connect_bank_screen.dart  home_screen.dart  login_screen.dart  register_screen.dart  splash_screen.dart
frontend/lib/services/: api_service.dart  auth_service.dart  bank_service.dart  services.dart  (+1 more)
frontend/test/: widget_test.dart
sample_data/: categories.csv
utils/: encryption.py
(+14 files in other folders)
